--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
 
 .header {
   display: flex;
-  box-shadow: 0px 1px 0px 0px $color-elements;
+  box-shadow: 0px 1px 0px 0px var(--color-elements);
 
   &__logo-link {
     display: flex;
@@ -67,7 +67,7 @@
   &__link {
     display: inline-block;
     box-sizing: border-box;
-    color: $color-secondary;
+    color: var(--color-secondary);
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 800;
@@ -79,8 +79,8 @@
       color $effect-duration;
 
     &:hover {
-      @include hover(color, $color-primary);
-      @include hover(border-color, $color-primary);
+      @include hover(color, var(--color-primary));
+      @include hover(border-color, var(--color-primary));
     }
 
     @include on-tablet {
@@ -93,11 +93,11 @@
     }
 
     &.active {
-      color: $color-primary;
-      border-bottom: 3px solid $color-primary;
+      color: var(--color-primary);
+      border-bottom: 3px solid var(--color-primary);
 
       @include on-mobile {
-        border-bottom: 2px solid $color-primary;
+        border-bottom: 2px solid var(--color-primary);
       }
     }
   }
@@ -107,7 +107,7 @@
 
     @include on-mobile {
       width: 100%;
-      border: 1px solid $color-elements;
+      border: 1px solid var(--color-elements);
     }
   }
 }
@@ -130,7 +130,7 @@
 
   background: transparent;
   border: none;
-  box-shadow: -1px 0px 0px 0px $color-elements;
+  box-shadow: -1px 0px 0px 0px var(--color-elements);
   border-bottom: 3px solid transparent;
   box-sizing: border-box;
 
@@ -141,17 +141,17 @@
   }
 
   &.active {
-    border-bottom: 3px solid $color-primary;
+    border-bottom: 3px solid var(--color-primary);
 
     &:not(.header-button--menu) {
       @include on-mobile {
-        border-bottom: 2px solid $color-primary;
+        border-bottom: 2px solid var(--color-primary);
       }
     }
   }
 
   &:not(.header-button--menu) {
-    @include hover(border-color, $color-primary);
+    @include hover(border-color, var(--color-primary));
 
     @include on-mobile {
       width: 50%;
@@ -183,7 +183,7 @@
   height: 12px;
   width: 12px;
   border-radius: 50%;
-  background-color: $color-red;
+  background-color: var(--color-red);
 
   position: absolute;
   bottom: 8px;
