--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -42,7 +42,7 @@
     width: 100%;
     height: max-content;
     padding: 24px;
-    border: 1px solid $color-elements;
+    border: 1px solid var(--color-elements);
 
     @include on-tablet {
       grid-column: 1/-1;
@@ -50,7 +50,7 @@
   }
 
   &__total-price {
-    color: $color-primary;
+    color: var(--color-primary);
     font-size: 32px;
     font-weight: 700;
     line-height: 41px;
@@ -60,8 +60,8 @@
   &__items-count {
     padding-bottom: 24px;
     margin-bottom: 24px;
-    border-bottom: 1px solid $color-elements;
-    color: $color-secondary;
+    border-bottom: 1px solid var(--color-elements);
+    color: var(--color-secondary);
     font-size: 14px;
     font-weight: 500;
     line-height: 21px;
@@ -78,8 +78,8 @@
     font-weight: 600;
     text-align: center;
     text-decoration: none;
-    background-color: $color-primary;
-    color: $color-white;
+    background-color: var(--color-primary);
+    color: var(--color-white);
     border: none;
     cursor: pointer;
     transition: background-color $effect-duration;
