--- a/src/components/BackButton/BackButton.scss
+++ b/src/components/BackButton/BackButton.scss
@@ -17,7 +17,7 @@
   }
 
   &--title {
-    color: $color-secondary;
+    color: var(--color-secondary);
   }
 
   &:hover {
@@ -25,7 +25,7 @@
       scale: 1.1;
     }
     .back-button--title {
-      color: $color-primary;
+      color: var(--color-primary);
     }
   }
 
@@ -34,7 +34,7 @@
       scale: 0.95;
     }
     .back-button--title {
-      color: $color-secondary;
+      color: var(--color-secondary);
     }
   }
 }
