--- a/src/components/NewFooter/NewFooter.scss
+++ b/src/components/NewFooter/NewFooter.scss
@@ -5,7 +5,7 @@
   width: 100%;
   // position: fixed;
   // bottom: 0;
-  box-shadow: 0px -1px 0px 0px $color-elements;
+  box-shadow: 0px -1px 0px 0px var(--color-elements);
 
   &__container {
     display: flex;
@@ -24,7 +24,6 @@
   &__logo-link {
     display: flex;
     width: 89px;
-
   }
 
   &__logo {
@@ -53,14 +52,14 @@
   }
 
   &__link {
-    color: $color-secondary;
+    color: var(--color-secondary);
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 800;
     line-height: 20px;
     letter-spacing: 0.04em;
 
-    @include hover(color, $color-primary);
+    @include hover(color, var(--color-primary));
   }
 
   &__back-to-top {
@@ -73,17 +72,16 @@
     background: transparent;
     border: none;
     cursor: pointer;
-    color: $color-secondary;
+    color: var(--color-secondary);
     transition: all $effect-duration;
 
     &:hover {
-      color: $color-primary;
+      color: var(--color-primary);
 
       & :last-child {
-        border-color: $color-primary;
+        border-color: var(--color-primary);
       }
     }
-
 
     @include on-mobile {
       justify-content: center;
@@ -95,7 +93,7 @@
     align-items: center;
     justify-content: center;
     padding: 14px;
-    border: 1px solid $color-icons;
+    border: 1px solid var(--color-icons);
     transition: all $effect-duration;
   }
 }
