--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -3,7 +3,7 @@
 
 .productCard {
   padding: 32px;
-  border: 1px solid $color-elements;
+  border: 1px solid var(--color-elements);
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -51,7 +51,7 @@
     font-size: 14px;
     font-weight: 600;
     padding-top: 16px;
-    color: $color-primary;
+    color: var(--color-primary);
     height: 60px;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -66,20 +66,20 @@
       display: block;
       height: 1px;
       width: 100%;
-      background-color: $color-elements;
+      background-color: var(--color-elements);
       margin-bottom: 8px;
       position: absolute;
       bottom: -16px;
     }
 
     &-discount {
-      color: $color-primary;
+      color: var(--color-primary);
       font-weight: 800;
       margin-right: 8px;
     }
 
     &-full {
-      color: $color-secondary;
+      color: var(--color-secondary);
       font-weight: 500;
       text-decoration: line-through;
       text-decoration-thickness: 1px;
@@ -100,13 +100,13 @@
 
   &__param {
     font-size: 12px;
-    color: $color-secondary;
+    color: var(--color-secondary);
     line-height: 15px;
     font-weight: 600;
   }
 
   &__value {
-    color: $color-primary;
+    color: var(--color-primary);
     font-size: 12px;
     font-weight: 600;
   }
