--- a/src/components/ScrollingList/ScrollingList.scss
+++ b/src/components/ScrollingList/ScrollingList.scss
@@ -43,8 +43,8 @@
   height: 32px;
   background-position: center;
   background-repeat: no-repeat;
-  border: 1px solid $color-elements;
-  background-color: $color-white;
+  border: 1px solid var(--color-elements);
+  background-color: var(--color-white);
   cursor: pointer;
 
   &--left {
