--- a/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/CheckoutPage/CheckoutPage.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; 
+  min-height: 100vh;
   padding-top: 24px;
   padding-bottom: 80px;
 
@@ -60,8 +60,8 @@
     font-weight: 600;
     text-align: center;
     text-decoration: none;
-    background-color: $color-primary;
-    color: $color-white;
+    background-color: var(--color-primary);
+    color: var(--color-white);
     border: none;
     cursor: pointer;
     box-sizing: border-box;
