--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -74,7 +74,7 @@
   font-size: 12px;
   font-weight: 600;
   line-height: 15px;
-  color: $color-secondary;
+  color: var(--color-secondary);
 }
 
 @mixin body-text {
@@ -82,7 +82,7 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 21px;
-  color: $color-secondary;
+  color: var(--color-secondary);
 }
 
 @mixin buttons-text {
@@ -90,7 +90,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 21px;
-  color: $color-primary;
+  color: var(--color-primary);
 }
 
 @mixin h1 {
@@ -99,7 +99,7 @@
   font-weight: 800;
   line-height: 56px;
   letter-spacing: -0.01em;
-  color: $color-primary;
+  color: var(--color-primary);
 
   @include on-mobile {
     font-size: 32px;
@@ -113,7 +113,7 @@
   font-weight: 800;
   line-height: 41px;
   letter-spacing: -0.01em;
-  color: $color-primary;
+  color: var(--color-primary);
 
   @include on-mobile {
     font-size: 22px;
@@ -123,7 +123,7 @@
 }
 
 @mixin h3 {
-  color: $color-primary;
+  color: var(--color-primary);
   font-family: $mont;
   font-size: 22px;
   font-weight: 800;
@@ -137,7 +137,7 @@
 }
 
 @mixin h4 {
-  color: $color-primary;
+  color: var(--color-primary);
   font-family: $mont;
   font-size: 20px;
   font-weight: 700;
