heart transition fix

--- a/src/components/AddToCartButton/AddToCartButton.scss
+++ b/src/components/AddToCartButton/AddToCartButton.scss
@@ -18,6 +18,7 @@
   cursor: pointer;
 
   @include hover(box-shadow, 0 3px 13px 0 rgba(23, 32, 49, 0.4));
+  transition: all ease $effect-duration;
 
   &--selected {
     background-color: var(--color-white);
