--- a/src/pages/CartPage/CartItem/CartItem.scss
+++ b/src/pages/CartPage/CartItem/CartItem.scss
@@ -52,11 +52,15 @@
 
   &__product-link {
     display: flex;
-    flex-basis: 25%;
+    //  flex-basis: 25%;
     text-decoration: none;
 
     &--name {
-      flex-basis: 60%;
+      //  flex-basis: 60%;
+
+      @include on-mobile {
+        //  flex-basis: 45%
+      }
     }
   }
 
@@ -68,26 +72,64 @@
     &:hover {
       text-decoration: underline;
     }
+    @include on-mobile {
+      // flex-basis: 100%;
+    }
   }
 
   &__count-buttons {
-    margin-right: 40px;
+    // margin-right: 40px;
     width: 96px;
     height: 32px;
-    display: flex;
+    display: grid;
     justify-content: space-between;
     align-items: center;
-    gap: 14px;
+    // gap: 14px;
+    flex-direction: column;
+    grid-template-columns: 1fr 32px 1fr;
+    justify-items: center;
     @include body-text;
-  }
+   }
 
   &__button {
-    width: 32px;
+    min-width: 32px;
     height: 100%;
     background-color: var(--color-white);
   }
 
   &__price {
+    min-width: 90px;
     @include h3;
+
+    @include on-mobile {
+      text-align: end;
+    }
+  }
+  .sum {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+    @include on-mobile {
+      width: 100%;
+      // gap: 16px;
+      // justify-content: space-between;
+    }
+  }
+  .gadget {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 24px;
+    @include on-mobile {
+      // width: 100%;
+      gap: 16px;
+    }
   }
 }
