--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -9,11 +9,12 @@
   box-sizing: border-box;
   justify-content: center;
   gap: 8px;
+  background-color: var(--product-card-bg-color);
 
   height: 480px;
   width: 272px;
 
-  @include hover(box-shadow, 0 3px 13px 0 rgba(23, 32, 49, 0.4));
+  @include hover(box-shadow, var(--hover-shadow-color));
 
   @include on-tablet {
     height: 470px;
