--- a/src/pages/CheckoutPage/CheckoutPage.scss
+++ b/src/pages/CheckoutPage/CheckoutPage.scss
@@ -60,8 +60,8 @@
     font-weight: 600;
     text-align: center;
     text-decoration: none;
-    background-color: var(--color-primary);
-    color: var(--color-white);
+    background-color: var(--button-bg-color);
+    color: var(--button-color);
     border: none;
     cursor: pointer;
     box-sizing: border-box;
