--- a/src/pages/ProductsPage/DropDown/DropDown.scss
+++ b/src/pages/ProductsPage/DropDown/DropDown.scss
@@ -68,7 +68,7 @@
 
     &:hover {
       background: #fafbfc;
-      color: var(--color-primary);
+      color: var(--dropdown-hover-color);
     }
   }
 }
