--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,24 @@
   --color-phones: #6d6474;
   --color-tablets: #8d8d92;
   --color-accessories: #973d5f;
+
+  --button-color: var(--color-white);
+  --button-color-selected: var(--color-green);
+  --button-bg-color: var(--color-primary);
+  --button-bg-color-selected: var(--color-white);
+  --button-border-color: var(--color-primary);
+  --button-border-color-selected: var(--color-elements);
+
+  --capacity-button-color: var(--color-primary);
+  --capacity-button-bg-color: var(--color-white);
+  --capacity-button-selected-bg-color: var(--color-primary);
+
+  --dropdown-hover-color: var(--color-primary);
+
+  --hover-shadow-color: 0 5px 10px 3px rgba(23, 32, 49, 0.4);
+
+  --product-card-bg-color: var(--color-white);
+
   --icon-filter: none;
 }
 
@@ -21,22 +39,40 @@
   --page-bg-color: #0f1121;
   --color-primary: #f1f2f9;
   --color-secondary: #75767f;
-  --color-icons: #f1f2f9; // такий як і primary
+  --color-icons: #f1f2f9;
   --color-elements: #3b3e4a;
-  --color-hover-background: #4a4d58; // підходить для ховеру іконок
-  --color-white: #f1f2f9; // primary and icons color;
+  --color-hover-background: #4a4d58;
+  --color-white: #f1f2f9;
   --color-red: #eb5757;
   --color-green: #27ae60;
   --color-phones: #6d6474;
   --color-tablets: #8d8d92;
   --color-accessories: #973d5f;
+
+  --button-color: var(--color-primary);
+  --button-color-selected: var(--color-primary);
+  --button-bg-color: var(--color-button);
+  --button-bg-color-selected: var(--color-element-selected);
+  --button-border-color: var(--color-button);
+  --button-border-color-selected: var(--color-button);
+
+  --capacity-button-color: var(--color-primary);
+  --capacity-button-bg-color: var(--page-bg-color);
+  --capacity-button-selected-bg-color: var(--button-bg-color);
+
+  --dropdown-hover-color: var(--page-bg-color);
+
+  --hover-shadow-color: 0 5px 10px 3px rgba(255, 255, 255, 0.2);
+
+  --product-card-bg-color: var(--color-card-background);
+
   --icon-filter: invert(100%);
 
-  --color-background: #0f1121; //new
-  --color-button: #905bff; // new
-  --color-button-hover: #a378ff; //new
-  --color-card-background: #161827; // new
-  --color-icons-background: #323542; //new ( also for selected button)
+  --color-background: #0f1121;
+  --color-button: #905bff;
+  --color-button-hover: #a378ff;
+  --color-card-background: #161827;
+  --color-element-selected: #323542;
 }
 
 html {
