--- a/src/components/AddToCartButton/AddToCartButton.scss
+++ b/src/components/AddToCartButton/AddToCartButton.scss
@@ -6,23 +6,23 @@
   align-items: center;
   justify-content: center;
   height: 40px;
-  background-color: var(--color-primary);
-  border: 1px solid var(--color-primary);
+  background-color: var(--button-bg-color);
+  border: 1px solid var(--button-border-color);
   box-sizing: border-box;
 
-  color: var(--color-white);
+  color: var(--button-color);
   font-weight: 600;
   font-size: 14px;
   flex-grow: 1;
 
   cursor: pointer;
 
-  @include hover(box-shadow, 0 3px 13px 0 rgba(23, 32, 49, 0.4));
+  @include hover(box-shadow, var(--hover-shadow-color));
   transition: all ease $effect-duration;
 
   &--selected {
-    background-color: var(--color-white);
-    color: var(--color-green);
-    border: 1px solid var(--color-elements);
+    background-color: var(--button-bg-color-selected);
+    color: var(--button-color-selected);
+    border: 1px solid var(--button-border-color-selected);
   }
 }
