--- a/src/components/ProductDetails/ProductDetails.scss
+++ b/src/components/ProductDetails/ProductDetails.scss
@@ -50,6 +50,7 @@
     cursor: pointer;
 
     @include hover(transform, scale(1.2));
+
     @include on-tablet {
       height: 35px;
       width: 35px;
@@ -143,6 +144,8 @@
   }
 
   &__available-capacity {
+    color: var(--capacity-button-color);
+    background-color: var(--capacity-button-bg-color);
     border: 1px solid var(--color-elements);
     height: 32px;
     width: max-content;
@@ -157,7 +160,7 @@
     &--active {
       color: var(--color-white);
       border: 1px solid var(--color-primary);
-      background-color: var(--color-primary);
+      background-color: var(--capacity-button-selected-bg-color);
       pointer-events: none;
       cursor: auto;
     }
