--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -78,8 +78,8 @@
     font-weight: 600;
     text-align: center;
     text-decoration: none;
-    background-color: var(--color-primary);
-    color: var(--color-white);
+    background-color: var(--button-bg-color);
+    color: var(--button-color);
     border: none;
     cursor: pointer;
     transition: background-color $effect-duration;
