--- a/src/App.scss
+++ b/src/App.scss
@@ -52,6 +52,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 body > div:nth-child(1) {
@@ -77,6 +78,6 @@ main {
   flex-grow: 1;
 }
 
-body:has(div#root > div.App > header.header > nav.menu--open) {
+body:has(div#root > div.App > aside.menu--open) {
   overflow: hidden;
 }
