--- a/src/components/NewHeader/NewHeader.scss
+++ b/src/components/NewHeader/NewHeader.scss
@@ -41,7 +41,6 @@ $button-size-tablet: 48px;
 .header {
   display: flex;
   box-shadow: 0px 1px 0px 0px var(--color-elements);
-  transition: all $effect-duration;
 
   @include on-mobile {
     z-index: 2;
@@ -75,9 +74,12 @@ $button-size-tablet: 48px;
 
 .menu {
   z-index: 1;
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 100vh;
-  width: 100vw;
+  // width: 100vw;
   background-color: var(--page-bg-color);
   transform: translateX(100%);
   transition: all $effect-duration;
@@ -130,7 +132,7 @@ $button-size-tablet: 48px;
     line-height: $button-size-desktop;
     letter-spacing: 0.04em;
     color: var(--color-secondary);
-    transition: all $effect-duration;
+    transition: color $effect-duration;
 
     @include on-tablet {
       line-height: $button-size-tablet;
@@ -164,7 +166,7 @@ $button-size-tablet: 48px;
     justify-content: center;
     width: $button-size-desktop;
     height: $button-size-desktop;
-    transition: all $effect-duration;
+    transition: width $effect-duration, height $effect-duration;
 
     @include on-tablet {
       width: $button-size-tablet;
