--- a/src/components/NewHeader/NewHeader.scss
+++ b/src/components/NewHeader/NewHeader.scss
@@ -10,7 +10,7 @@ $button-size-tablet: 48px;
     position: absolute;
     bottom: 0;
     display: block;
-    width:100%;
+    width: 100%;
     height: 3px;
     background-color: transparent;
     transition: background-color $effect-duration;
@@ -19,7 +19,6 @@ $button-size-tablet: 48px;
       height: 2px;
     }
   }
-
 
   &:hover {
     color: var(--color-primary);
@@ -166,7 +165,9 @@ $button-size-tablet: 48px;
     justify-content: center;
     width: $button-size-desktop;
     height: $button-size-desktop;
-    transition: width $effect-duration, height $effect-duration;
+    transition:
+      width $effect-duration,
+      height $effect-duration;
 
     @include on-tablet {
       width: $button-size-tablet;
