--- a/src/components/ProductCardHorizontal/ProductCardHorizontal.scss
+++ b/src/components/ProductCardHorizontal/ProductCardHorizontal.scss
@@ -1,65 +1,66 @@
 @import '../../styles/utils/mixins';
 
-.productCard {
-  padding: 32px;
+.productCardHorizontal {
+  padding: 16px;
   border: 1px solid var(--color-elements);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   box-sizing: border-box;
-  justify-content: center;
-  gap: 8px;
+  gap: 16px;
   background-color: var(--product-card-bg-color);
-
-  height: 480px;
-  width: 272px;
+  margin-bottom: 5px;
 
   @include hover(box-shadow, var(--hover-shadow-color));
 
-  @include on-tablet {
-    height: 470px;
-    width: 100%;
+  &__top-wrapper {
+    display: flex;
+    justify-content: space-between;
   }
 
-  @include on-mobile {
-    height: 439px;
-    width: 100%;
-    min-width: 200px;
+  &__link {
+    text-decoration: none;
+    color: inherit;
   }
 
   &__image {
-    display: block;
-    margin: 0 auto;
     object-fit: contain;
-
-    width: 155px;
-    height: 196px;
+    width: 120px;
+    height: 150px;
 
     @include hover(scale, 1.1);
 
     @include on-tablet {
-      width: 140px;
-      height: 181px;
+      width: 100px;
+      height: 130px;
     }
 
     @include on-mobile {
-      width: 110px;
-      height: 148px;
+      width: 80px;
+      height: 110px;
     }
   }
 
+  &__details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+  }
+
   &__title {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
-    padding-top: 16px;
+    padding-top: 8px;
     color: var(--color-primary);
-    height: 60px;
+    height: 40px;
     overflow: hidden;
     text-overflow: ellipsis;
   }
 
   &__prices {
-    font-size: 22px;
+    font-size: 18px;
     position: relative;
+    margin-top: 8px;
 
     &::after {
       content: '';
@@ -69,7 +70,6 @@
       background-color: var(--color-elements);
       margin-bottom: 8px;
       position: absolute;
-      bottom: -16px;
     }
 
     &-discount {
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     padding: 8px 0;
-    gap: 8px;
+    gap: 4px;
 
     &-pair {
       display: flex;
@@ -112,6 +112,7 @@
   }
 
   &__buttons {
+    max-width: 150px;
     width: 100%;
     display: flex;
     gap: 8px;
