--- a/src/pages/ProductsPage/ProductsPage.scss
+++ b/src/pages/ProductsPage/ProductsPage.scss
@@ -1,5 +1,4 @@
 @import '../../styles/utils/mixins';
-@import '../../styles/utils/variables';
 
 .products {
   padding-top: 24px;
@@ -58,6 +57,7 @@
 
   &__list {
     display: grid;
+
     grid-template-columns: repeat(4, 1fr);
     column-gap: 16px;
     row-gap: 40px;
@@ -96,5 +96,22 @@
 
   &__loader {
     height: 50vh;
+  }
+
+  &__view-wrp {
+    display: flex;
+    align-items: end;
+  }
+
+  &__view-btn {
+    @include small-text;
+    @include hover(border, 1px solid #89939a);
+    @include active(scale, 0.95);
+
+    height: 40px;
+    color: var(--color-primary);
+    background-color: var(--page-bg-color);
+    border: 1px solid #b4bdc3;
+    cursor: pointer;
   }
 }
