--- a/src/components/ProductDetails/ProductDetails.scss
+++ b/src/components/ProductDetails/ProductDetails.scss
@@ -12,10 +12,9 @@
 }
 
 .boxed-images {
-  flex-grow: 1;
   grid-column: span 12;
   display: flex;
-  align-items: center;
+  gap: 16px;
 
   @include on-tablet {
     grid-column: span 7;
@@ -24,6 +23,7 @@
   @include on-mobile {
     grid-column: span 4;
     flex-direction: column-reverse;
+    align-items: center;
   }
 
   &__small-container {
@@ -31,11 +31,9 @@
     flex-direction: column;
     gap: 16px;
     width: min-content;
-    margin-right: 16px;
 
     @include on-mobile {
       flex-direction: row;
-      margin-right: 0;
       gap: 8px;
     }
   }
@@ -59,6 +57,10 @@
       height: 50px;
       width: 50px;
     }
+
+    &--active {
+      border: 1px solid var(--color-primary);
+    }
   }
 
   &__big-container {
@@ -66,6 +68,8 @@
     height: 464px;
     display: flex;
     justify-content: center;
+    overflow: hidden;
+
 
     @include on-tablet {
       width: 100%;
@@ -79,6 +83,12 @@
   }
 
   &__big-image {
+    -webkit-user-drag: none;
+    width: 100%;
+    object-fit: contain;
+    transition: transform 0.5s ease;
+    cursor: pointer;
+
     @include on-mobile {
       max-height: 240px;
     }
@@ -322,4 +332,12 @@
   @include on-mobile {
     margin-bottom: 56px;
   }
+}
+
+.swipe-left .boxed-images__big-image {
+  transform: translateX(-100%);
+}
+
+.swipe-right .boxed-images__big-image {
+  transform: translateX(100%);
 }
