--- a/src/styles/utils/_icons.scss
+++ b/src/styles/utils/_icons.scss
@@ -50,7 +50,7 @@
   }
 
   &-down {
-    background-image: url('../../../public/icons/svg/down.svg');
+    background-image: url('../../../public/icons/svg/down-dark.svg');
   }
 
   &-close {
