Pagination fix + header links

--- a/src/pages/ProductsPage/Pagination/Pagination.scss
+++ b/src/pages/ProductsPage/Pagination/Pagination.scss
@@ -18,8 +18,9 @@ $pageItem-size: 32px;
       padding-left: 8px;
     }
 
-    &--hidden {
-      visibility: hidden;
+    &--disabled {
+      pointer-events: none;
+      filter: opacity(0.5);
     }
 
     &--plug {
