--- a/src/components/OldHeader/Header.scss
+++ b/src/components/OldHeader/Header.scss
@@ -185,7 +185,7 @@
   width: 12px;
   border-radius: 50%;
   background-color: var(--color-red);
-  filter: var(--icon-filter); //new
+  filter: var(--icon-filter);
 
   position: absolute;
   bottom: 8px;
