--- a/src/components/NewHeader/NewHeader.scss
+++ b/src/components/NewHeader/NewHeader.scss
@@ -156,6 +156,19 @@ $button-size-tablet: 48px;
       border: 1px solid var(--color-elements);
       box-sizing: border-box;
     }
+
+    &-lng-wrp {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &-lng-btn {
+      color: var(--color-primary);
+      background-color: var(--page-bg-color);
+      border: none;
+      cursor: pointer;
+    }
   }
 
   &__button {
