--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -3,6 +3,8 @@ $tablet-max-width: 1199px;
 $desktop-min-width: 1200px;
 $container-max-width: 1136px;
 
+$footer-height: 96px;
+
 $effect-duration: 0.3s;
 
 $mont: Mont, Arial, sans-serif;
